--- a/Riley_Benbrook_Projectile_Motion_Lab.ipynb
+++ b/Riley_Benbrook_Projectile_Motion_Lab.ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {
         "id": "nPc1LPGbWiGw",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 816
         },
-        "outputId": "311455ee-8590-4666-dd6c-b4538022b5f5"
+        "outputId": "9065154f-2021-4cab-e8c9-2299f4f39e36"
       },
       "outputs": [
         {
@@ -36,7 +36,7 @@
       "source": [
         "#PHSX 216 Projectile Motion Lab plotting code\n",
         "#performs 2nd degree polynomial fit\n",
-        "#Brianna Beller\n",
+        "#Riley Benbrook\n",
         "#Updated September 2024\n",
         "\n",
         "import numpy as np\n",
