--- a/Riley_Benbrook_Lab_2.ipynb
+++ b/Riley_Benbrook_Lab_2.ipynb
@@ -27,14 +27,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 816
         },
         "id": "av6eeGDxsvfi",
-        "outputId": "9e92fc86-9675-45b7-9f88-270765d277a1"
+        "outputId": "1a6a13f4-1a08-40ce-f48b-6354cff27063"
       },
       "outputs": [
         {
@@ -50,7 +50,7 @@
       ],
       "source": [
         "#PHSX 216 & 218 plotting code\n",
-        "#Brianna Beller\n",
+        "#Riley Benbrook\n",
         "#Updated September 2023\n",
         "\n",
         "#import packages and libraries, assign shortcut names\n",
